--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://utoker:k1uwERiCNRzuwNvy@cluster0.0hktw3k.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://utoker:wJccjCAyl9Dk8lew@cluster0.0hktw3k.mongodb.net/?retryWrites=true&w=majority
